[gd_scene load_steps=28 format=3 uid="uid://bolgiuoejl3sq"]

[ext_resource type="Script" uid="uid://de5u4w43u22eq" path="res://script/board.gd" id="1_5kiuu"]
[ext_resource type="Script" uid="uid://byi4jweoamwvs" path="res://script/game.gd" id="1_33cqm"]
[ext_resource type="Texture2D" uid="uid://cu1647i5y0os7" path="res://assets/images/game_scrn/sky.png" id="2_81276"]
[ext_resource type="Script" uid="uid://cky8vxakp54px" path="res://script/tile_rack.gd" id="2_dbls1"]
[ext_resource type="Texture2D" uid="uid://b8x1o4pevnlid" path="res://assets/images/game_scrn/logo.png" id="4_81276"]
[ext_resource type="Texture2D" uid="uid://dlp1gby2g6c5" path="res://assets/images/game_scrn/moon.png" id="4_yq8tf"]
[ext_resource type="Texture2D" uid="uid://b3ob7dm0k1cfh" path="res://assets/images/game_scrn/land.png" id="5_sng2h"]
[ext_resource type="Texture2D" uid="uid://dabdgtj8gk0j8" path="res://assets/images/game_scrn/cell.jpg" id="6_81276"]
[ext_resource type="AudioStream" uid="uid://dk1o485hutq51" path="res://assets/sfx/game_scrn/land_in.mp3" id="9_17rxn"]
[ext_resource type="Texture2D" uid="uid://d3ytayvawuhev" path="res://assets/images/game_scrn/rack.jpg" id="9_81276"]
[ext_resource type="Texture2D" uid="uid://dlcwcnsbeo2gw" path="res://icon.svg" id="9_ym5sv"]
[ext_resource type="Texture2D" uid="uid://shqsmhkjnclr" path="res://assets/images/game_scrn/clock.png" id="10_5g16k"]
[ext_resource type="AudioStream" uid="uid://wld01qsjhfli" path="res://assets/sfx/game_scrn/sky.mp3" id="10_yq8tf"]
[ext_resource type="Texture2D" uid="uid://bjxykwyf3nron" path="res://assets/images/buttons/id_copy.png" id="14_81276"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ve786"]
texture = ExtResource("6_81276")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_81276"]
texture = ExtResource("9_81276")
region_rect = Rect2(0, 32, 1040, 992)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sng2h"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0, 0, 0, 0.6392157)
corner_radius_top_left = 19
corner_radius_top_right = 19
corner_radius_bottom_right = 19
corner_radius_bottom_left = 19
corner_detail = 5

[sub_resource type="LabelSettings" id="LabelSettings_ve786"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_0lu6w"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_i6gbm"]
font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5g16k"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0, 0.36078432, 0.36078432, 0.15686275)
corner_radius_top_left = 19
corner_radius_top_right = 19
corner_radius_bottom_right = 19
corner_radius_bottom_left = 19
corner_detail = 5

[sub_resource type="LabelSettings" id="LabelSettings_sng2h"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_81276"]
font_size = 25

[sub_resource type="Animation" id="Animation_17rxn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("land:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1100)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("moon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -400)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Board:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TileRack:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("board_back:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("player:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("opponent:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("uid:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Rack_back:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ll5lq"]
resource_name = "land"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("land:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 1100), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("moon:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 1.33),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -400), Vector2(0, -400), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Board:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TileRack:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("board_back:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "audio"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("sfx/land")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"clips": [{
"end_offset": 0.1625,
"start_offset": 0.2135,
"stream": ExtResource("9_17rxn")
}],
"times": PackedFloat32Array(0)
}
tracks/5/use_blend = true
tracks/6/type = "audio"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("sfx/sky")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("10_yq8tf")
}],
"times": PackedFloat32Array(1)
}
tracks/6/use_blend = true
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("player:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("opponent:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("uid:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Rack_back:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yq8tf"]
_data = {
&"RESET": SubResource("Animation_17rxn"),
&"land": SubResource("Animation_ll5lq")
}

[sub_resource type="LabelSettings" id="LabelSettings_ym5sv"]

[node name="game" type="CanvasLayer"]
script = ExtResource("1_33cqm")

[node name="back" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_81276")
expand_mode = 1

[node name="moon" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -400.0
offset_bottom = -400.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_yq8tf")
expand_mode = 1
stretch_mode = 5

[node name="logo" type="TextureRect" parent="moon"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -165.5
offset_top = 35.0
offset_right = 165.5
offset_bottom = 116.0
grow_horizontal = 2
texture = ExtResource("4_81276")

[node name="land" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1100.0
offset_bottom = 1100.0037
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_sng2h")
expand_mode = 1

[node name="board_back" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -318.0
offset_top = -283.5
offset_right = 318.0
offset_bottom = 283.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ve786")

[node name="Board" type="GridContainer" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -312.5
offset_top = -279.0
offset_right = 312.5
offset_bottom = 279.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 1
columns = 10
script = ExtResource("1_5kiuu")

[node name="Rack_back" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -296.0
offset_top = 292.5
offset_right = 40.0
offset_bottom = 363.54004
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="RACK" type="Panel" parent="Rack_back"]
custom_minimum_size = Vector2(84, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_81276")

[node name="RACK2" type="Panel" parent="Rack_back"]
custom_minimum_size = Vector2(84, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_81276")

[node name="RACK3" type="Panel" parent="Rack_back"]
custom_minimum_size = Vector2(84, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_81276")

[node name="RACK4" type="Panel" parent="Rack_back"]
custom_minimum_size = Vector2(84, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_81276")

[node name="TileRack" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -296.0
offset_top = 292.5
offset_right = 40.0
offset_bottom = 363.53998
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
script = ExtResource("2_dbls1")

[node name="player" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -297.0
offset_top = -172.0
offset_right = 297.0
offset_bottom = -62.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_sng2h")

[node name="status" type="HBoxContainer" parent="player"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -297.0
offset_top = -55.0
offset_right = 297.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="division" type="Control" parent="player/status"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2

[node name="dp" type="TextureRect" parent="player/status"]
custom_minimum_size = Vector2(95, 90)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("9_ym5sv")
expand_mode = 1
stretch_mode = 4

[node name="division2" type="Control" parent="player/status"]
custom_minimum_size = Vector2(14, 0)
layout_mode = 2

[node name="player_name" type="Label" parent="player/status"]
layout_mode = 2
text = "ANSH"
label_settings = SubResource("LabelSettings_ve786")
horizontal_alignment = 1
vertical_alignment = 1

[node name="score" type="Label" parent="player/status"]
layout_mode = 2
text = "(1445)"
label_settings = SubResource("LabelSettings_0lu6w")
horizontal_alignment = 1
vertical_alignment = 1

[node name="division3" type="Control" parent="player/status"]
custom_minimum_size = Vector2(136, 0)
layout_mode = 2

[node name="time_icon" type="TextureRect" parent="player/status"]
custom_minimum_size = Vector2(41, 45)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("10_5g16k")
expand_mode = 1
stretch_mode = 5

[node name="time" type="Label" parent="player/status"]
layout_mode = 2
label_settings = SubResource("LabelSettings_i6gbm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="opponent" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -297.0
offset_top = 161.0
offset_right = 297.0
offset_bottom = 271.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5g16k")

[node name="opponent_status" type="HBoxContainer" parent="opponent"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -297.0
offset_top = -55.0
offset_right = 297.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="division" type="Control" parent="opponent/opponent_status"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2

[node name="dp" type="TextureRect" parent="opponent/opponent_status"]
custom_minimum_size = Vector2(95, 90)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("9_ym5sv")
expand_mode = 1
stretch_mode = 5

[node name="division2" type="Control" parent="opponent/opponent_status"]
custom_minimum_size = Vector2(14, 0)
layout_mode = 2

[node name="opponent_name" type="Label" parent="opponent/opponent_status"]
layout_mode = 2
size_flags_horizontal = 4
text = "bozes"
label_settings = SubResource("LabelSettings_sng2h")
horizontal_alignment = 1
vertical_alignment = 1

[node name="score" type="Label" parent="opponent/opponent_status"]
layout_mode = 2
text = "(1445)"
label_settings = SubResource("LabelSettings_81276")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_yq8tf")
}
autoplay = "land"

[node name="uid" type="HBoxContainer" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -17.5
offset_right = 17.5
offset_bottom = 40.0
grow_horizontal = 2
alignment = 2

[node name="game_id" type="Label" parent="uid"]
layout_mode = 2
size_flags_horizontal = 4
label_settings = SubResource("LabelSettings_ym5sv")

[node name="copy" type="Button" parent="uid"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("14_81276")
icon_alignment = 1
expand_icon = true

[node name="sfx" type="Node" parent="."]

[node name="land" type="AudioStreamPlayer" parent="sfx"]

[node name="sky" type="AudioStreamPlayer" parent="sfx"]

[node name="timers" type="Node" parent="."]

[node name="Timer" type="Timer" parent="timers"]
wait_time = 600.0
one_shot = true

[connection signal="pressed" from="uid/copy" to="." method="_on_copy_pressed"]
